# tf-fs

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main_fuse.c
disk/: disk.h
include/: bitmap.h  block.h  inode.h  superblock.h  tf-fs.h  utils.h
src/: bitmap.c  block.c  inode.c  main.c  tf-fs.c  utils.c
